[package]
name = "paseto-pq"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Gerard Junior Cruzado <thatnewyorker@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Post-quantum PASETO tokens with CBOR serialization and ML-DSA signatures"
repository = "https://github.com/thatnewyorker/paseto-pq"
homepage = "https://github.com/thatnewyorker/paseto-pq"
categories = ["cryptography", "authentication", "web-programming"]
keywords = ["paseto", "post-quantum", "ml-dsa", "dilithium", "quantum-safe"]
readme = "README.md"

[dependencies]
# Post-quantum cryptography (RustCrypto)
ml-dsa = { version = "0.1.0-rc.7", features = ["rand_core", "pkcs8", "zeroize"] }
ml-kem = { version = "0.2.1", features = ["zeroize"] }

# Symmetric encryption for local tokens
chacha20poly1305 = { version = "0.10.1", features = ["std"] }

# Serialization and encoding
serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2"
base64 = { version = "0.22.1", features = ["std"] }

# Time handling (for token expiration)
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }

# Cryptographic utilities
rand_core = "0.10.0"
sha2 = "0.10.8"
hkdf = "0.12.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Optional features
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
rand = "0.10.0"
hex = "0.4"
proptest = "1.9"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["ml-dsa-44"]  # Optimized for network performance
logging = ["dep:tracing"]
std = []

# Security levels - choose exactly one
ml-dsa-44 = []   # Default: 128-bit security, smallest tokens, best network performance
ml-dsa-65 = []   # Balanced: 192-bit security, larger tokens, good for high-value use cases
ml-dsa-87 = []   # Maximum: 256-bit security, largest tokens, for critical infrastructure

# Convenience aliases
performance = ["ml-dsa-44"]        # Network-optimized (same as default)
balanced = ["ml-dsa-65"]           # Security/performance balance
maximum-security = ["ml-dsa-87"]   # Maximum security

[package.metadata.docs.rs]
features = ["ml-dsa-44", "logging"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
name = "pq_paseto_benchmarks"
harness = false
